# 119-monitoring-web

./: .dockerignore  .gitignore  README.md
.github/workflows/: django-ci.yml  react-ci.yml
backend/: Dockerfile.backend  pyproject.toml
backend/configs/: settings.py  urls.py
backend/hospital_api/: apps.py  models.py  serializers.py  urls.py  views.py
frontend/: Dockerfile.frontend
frontend/src/: App.js
frontend/src/components/: Header.css  Header.js  HospitalList.css  HospitalList.js  HospitalListView.css  HospitalListView.js  Index.css  Index.js  Loading.css  MapComponent.css  MapComponent.js  Sidebar.css  Sidebar.js
