[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
django = "^4.2.4"
djangorestframework = "^3.14.0"
mysqlclient = "^2.2.0"
django-extensions = "^3.2.3"
django-environ = "^0.10.0"
django-cors-headers = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
